2003-11-27  Pavel Roskin  <proski@gnu.org>

	* execute.c (toggle_panels): Refresh panels after returning from
	Ctrl-O.

	* cmd.c (view_file_cmd): Use input_expand_dialog().

	* wtools.c (quick_dialog_skip): Perform tilde expansion on input
	widgets that use cd completion.

	* utilunix.c (tilde_expand): Preserve tilde if the username
	could not be found.  Don't ever return NULL.  Change callers not
	to check for NULL.

	* dialog.c (do_select_widget): New function that it the only one
	calling dlg_focus() and dlg_unfocus().  Incorporate code from
	other functions that did it.
	(dlg_select_widget): Change return type to void.

2003-11-26  Pavel Roskin  <proski@gnu.org>

	* dialog.h (dlg_widget_active): New function - check if the
	widget is active.
	* boxes.c (display_callback): Use it.
	* layout.c (swap_panels): Likewise.
	* screen.c (do_panel_event): Likewise.

	* dialog.c: Eliminate callback macro.

	* dialog.c (dlg_replace_widget): Use dlg_select_widget().
	(select_a_widget): Rename to select_other_widget(), factorize
	most code from dlg_one_up() and dlg_one_down().

2003-11-24  Pavel Roskin  <proski@gnu.org>

	* complete.c (check_is_cd): Simplify logic, use isspace().

2003-11-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (add_new_group_input): Clean up.
	* wtools.c (do_create_message): Eliminate g_strdup_printf().
	(bg_message): Likewise.

2003-11-21  Pavel Roskin  <proski@gnu.org>

	* view.c (check_left_right_keys): Implement fast scrolling if
	Ctrl is pressed.  Idea by Arpad Biro <biro_arpad@yahoo.com>

	* execute.c (do_execute): Use get_key_code(), not getch() to
	consume all characters from a single sequence.
	Reported by Miven Dooligan <dooligan@intergate.ca>

2003-11-20  Pavel Roskin  <proski@gnu.org>

	* glibcompat.h: Provide replacement for g_slist_delete_link().
	Reported by Pavel S. Shirshov <pavelsh@mail.ru>

2003-11-20  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* util.c (load_mc_home_file): Eliminate g_strdup_printf().
